@@ -78,7 +78,7 @@
 #include "dm/dm_xvars.h"
 #include "fb.h"
 #include "fb/fb_ogl.h"
-#include "solid.h"
+#include "rt/solid.h"
 
 #include "./dm_private.h"
 
